--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,9 @@ Text text text
 \section{Testing}
 Text text text
 
+\section{Deployment}
+Text text text
+
 \section{Conclusion}
 Text text text
 
